--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^2.5.2",
+    "jspdf": "^3.0.0",
     "medhaxlserver": "file:",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.9.14"
+    "mysql2": "^3.13.0",
+    "nodemailer": "^6.9.14",
+    "pdfkit": "^0.16.0"
   },
   "description": ""
 }
