--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0"
   },
-  "description": ""
+  "description": "",
+  "engines": {
+    "node": "18.x"
+  }
 }
