--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.13.0",
     "nodemailer": "^6.10.0",
-    "pdfkit": "^0.16.0"
+    "pdfkit": "^0.16.0",
+    "socket.io": "^4.8.1"
   },
   "description": "",
   "engines": {
