--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mysql2": "^3.13.0",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
+    "readable-stream": "^4.7.0",
     "socket.io": "^4.8.1"
   },
   "description": "",
