--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^1.4.0",
     "medhaxlserver": "file:",
+    "minipass": "^7.1.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.13.0",
