--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
-    "express": "^4.21.2",
+    "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^1.4.0",
     "minipass": "^7.1.2",
@@ -30,7 +30,7 @@
     "mysql2": "^3.13.0",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
-    "qs": "^6.11.2",
+    "qs": "6.11.0",
     "readable-stream": "^4.7.0",
     "socket.io": "^4.8.1"
   },
