--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
-    "express": "4.18.2",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^1.4.0",
     "minipass": "^7.1.2",
