--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT_SECRET=MXL2025
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=mysql
-DB_NAME=mdb
-variable=${{ MySQL.MYSQL_URL }}
+DB_HOST = mysql.railway.internal
+DB_USER = root
+DB_PASS = vGrbgEfMkiDFRpJRwvWSufOEMprztHIS
+DB_NAME = railway
+DB_PORT = 3306
