update the .env file variable

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT_SECRET=MXL2025
-DB_HOST = mysql.railway.internal
+DB_HOST = crossover.proxy.rlwy.net
 DB_USER = root
 DB_PASS = vGrbgEfMkiDFRpJRwvWSufOEMprztHIS
 DB_NAME = railway
-DB_PORT = 3306
+DB_PORT = 36573
