update nrml code

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 JWT_SECRET=MXL2025
-DB_HOST = crossover.proxy.rlwy.net
-DB_USER = root
-DB_PASS = vGrbgEfMkiDFRpJRwvWSufOEMprztHIS
-DB_NAME = railway
-DB_PORT = 36573
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=mysql
+DB_NAME=mdb
