--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 JWT_SECRET=MXL2025
-DB_HOST=localhost
+DB_HOST=mysql-doqs.railway.internal
 DB_USER=root
-DB_PASS=mysql
-DB_NAME=mdb
+DB_PASS=TzjCGPlEURAKBMzrApGjSwZFzGKHBFbo
+DB_NAME=railway
+DB_PORT=3306
