--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT_SECRET=MXL2025
-DB_HOST=mysql-doqs.railway.internal
+DB_HOST=maglev.proxy.rlwy.net
+DB_PORT=19882
 DB_USER=root
 DB_PASS=TzjCGPlEURAKBMzrApGjSwZFzGKHBFbo
 DB_NAME=railway
-DB_PORT=3306
