changes on batch status

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 JWT_SECRET=MXL2025
-DB_HOST=maglev.proxy.rlwy.net
-DB_PORT=19882
+DB_HOST=localhost
 DB_USER=root
-DB_PASS=TzjCGPlEURAKBMzrApGjSwZFzGKHBFbo
-DB_NAME=railway
+DB_PASS=mysql
+DB_NAME=mdb
