--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 JWT_SECRET=MXL2025
-DB_HOST=mysql.railway.internal
+DB_HOST=localhost
 DB_USER=root
-DB_PASS=wFuPENybboNxnvkfqfCOeduObDCucFkM
-DB_NAME=railway
+DB_PASS=mysql
+DB_NAME=mdb
