--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "pdfkit": "^0.16.0",
     "qs": "6.11.0",
     "readable-stream": "^4.7.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "twilio": "^5.5.2"
   },
   "description": "",
   "engines": {
