--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^1.4.0",
+    "medhaxlserver": "file:",
     "minipass": "^7.1.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
@@ -33,6 +34,7 @@
     "pdfkit": "^0.16.0",
     "qs": "6.11.0",
     "readable-stream": "^4.7.0",
+    "side-channel-list": "^1.0.0",
     "socket.io": "^4.8.1"
   },
   "description": "",
